correctly aligned beatmap button

--- a/html/css/beatmap.css
+++ b/html/css/beatmap.css
@@ -93,12 +93,14 @@
 .bm_buttons_wrapper {
   display: flex;
   flex-direction: row;
+  margin-top: 10px;
+  margin-left: 10px;
 }
 
 .bm_button {
   background-color: #901F42;
   display: flex;
-  width: 120px;
+  width: 140px;
   height: 70px;
   border-radius: 13px;
   box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
